# inspectre

./: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: extract_link.rs  lib.rs  test_link.rs
