[package]
name = "inspectre-lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "0.3.2"
httpmock = "0.6.2"
once_cell = "1.8.0"
scraper = "0.12.0"
surf = "2.3.2"
tokio = { version = "1.13.0", features = ["rt", "macros"] }
